# TableTalk

./: .env.example  .replit  README.md  app.py  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted-Building-a-Modular-Extensible-Text2SQL-Backend-with-Dynamic-Metadata-Retrieval-Design-and-implemen-1740374785741.txt
src/api/: models.py  routes.py
src/core/: base.py  db.py  llm_provider.py  prompts.py
src/db/: connection.py  metadata.py  postgres_db.py  trino_db.py
src/llm/: ollama_provider.py  openai_provider.py
src/sql/: generator.py  validator.py
src/utils/: config.py  logger.py
