[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.8",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.64.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
    "sqlparse>=0.5.3",
    "uvicorn>=0.34.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.12",
    "trino>=0.333.0",
    "ruff>=0.9.7",
]

[tool.ruff]
# Enable ruff format
extend-include = ["*.ipynb"]
target-version = "py311"

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "PT", "RET", "SIM", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
